--- a/index.html
+++ b/index.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Assets/css/style.css">
     <title>Webflow website</title>
 </head>
 <body>
     <!-- header section start -->
     <header>
+      <nav class="navbar">
+        <h1>WEBFLOW</h1>
+        <button class="btn">Sing Up</button>
+      </nav>
 
+      <div class="banner">
+        <h1>Cool Dark UI Template for Webflow Agencies!</h1>
+        <button class="btn">Stay Focused</button>
+      </div>
     </header>
     <!-- header section end -->
-     
+
     <!-- main section start -->
     <main>
 
