--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Assets/css/style.css">
+    <link rel="stylesheet" href="Assets/css/style.css" />
     <title>Webflow website</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- header section start -->
     <header>
       <nav class="navbar">
@@ -29,14 +29,26 @@
 
     <!-- main section start -->
     <main>
-
+      <!-- action section start -->
+      <section class="action">
+        <div class="action-contant">
+          <h1>See It in Action</h1>
+          <p>
+            Explore the live preview and imagine your brand in this bold new
+            look.
+          </p>
+          <button class="btn">Launch Live Preview</button>
+        </div>
+        <div class="action-photo">
+          <img src="Assets/images/wc-mini.png" alt="" />
+        </div>
+      </section>
+      <!-- action section end -->
     </main>
     <!-- main section end -->
 
     <!-- footer section start -->
-    <footer>
-
-    </footer>
+    <footer></footer>
     <!-- footer section end -->
-</body>
+  </body>
 </html>
