--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
         </div>
       </section>
       <!-- action section end -->
+
+      <!-- productive section start -->
+      <section class="productive">
+        <div class="productive-title">
+          <h1>Joined Thousands of Productive Users</h1>
+        </div>
+        <div class="productive-items">
+          <div class="item">
+            <h1>50K</h1>
+            <p>Active Users</p>
+          </div>
+          <div class="item">
+            <h1>2M+</h1>
+            <p>Focus Sessions</p>
+          </div>
+          <div class="item">
+            <h1>95%</h1>
+            <p>Satisfaction Rate</p>
+          </div>
+        </div>
+      </section>
+      <!-- productive section end -->
+
+      
     </main>
     <!-- main section end -->
 
