review and contact section added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,103 @@
       </section>
       <!-- productive section end -->
 
-      
+      <!-- review section start -->
+      <section class="review">
+        <h3>What Our Users Say</h3>
+        <div class="review-items">
+          <div class="review-item">
+            <div class="rating">
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+            </div>
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="review-item-info">
+              <div class="avatar">
+                <img src="Assets/images/avatar.png" alt="" />
+              </div>
+              <div class="reviewer-details">
+                <h6>Reviewer name</h6>
+                <p>Date</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="review-item">
+            <div class="rating">
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+            </div>
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="review-item-info">
+              <div class="avatar">
+                <img src="Assets/images/avatar.png" alt="" />
+              </div>
+              <div class="reviewer-details">
+                <h6>Reviewer name</h6>
+                <p>Date</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="review-item">
+            <div class="rating">
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+              <img class="star" src="Assets/images/icon-star.png" alt="" />
+            </div>
+            <h4>Loved by Designers</h4>
+            <p>
+              This template instantly leveled up our presence.” – Studio Vertex
+            </p>
+            <div class="review-item-info">
+              <div class="avatar">
+                <img src="Assets/images/avatar.png" alt="" />
+              </div>
+              <div class="reviewer-details">
+                <h6>Reviewer name</h6>
+                <p>Date</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- contact form start -->
+      <section class="contact-section">
+        <div class="contact-left">
+          <h1>Let's Get in<br />Touch</h1>
+        </div>
+        <div class="contact-right">
+          <form class="contact-form">
+            <label for="email">Email</label>
+            <input type="text" id="subject" placeholder="example@email.com" required />
+
+            <label for="name">Name</label>
+            <input type="text" id="name" placeholder="full name" required />
+
+            <label for="message">Message</label>
+            <textarea name="" id="message" placeholder="write your message...." cols="20" rows="5" required></textarea>
+
+            <button type="submit">Get in Touch</button>
+          </form>
+        </div>
+      </section>
+      <!-- contact form end -->
+       
     </main>
     <!-- main section end -->
 
