footer section added in my project

--- a/index.html
+++ b/index.html
@@ -163,12 +163,28 @@
         </div>
       </section>
       <!-- contact form end -->
-       
+
     </main>
     <!-- main section end -->
 
     <!-- footer section start -->
-    <footer></footer>
+    <footer>
+        <section class="footer">
+        <div class="footer-content">
+          <h1>WEBFLOW</h1>
+          <p>
+            Ready to elevate your online presence? Contact us today to discuss
+            your project and discover how we can bring your vision to life.
+          </p>
+        </div>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">How it works</a>
+          <a href="#">Services</a>
+        </div>
+      </section>
+    </footer>
     <!-- footer section end -->
   </body>
 </html>
